OAK-10136: DynamicBoostLite tags should have less relevance than other fields (#868)
* OAK-10136: DynamicBoostLite tags should have less relevance than other fields

* OAK-10136: use 0.001f to deboost dynamic boost lite tags

* OAK-10136: fix failing test

* OAK-10136: improved test code

* OAK-10136: use 0.0001f to deboost dynamic boost lite tags

* OAK-10136: fix failing test

* OAK-10136: improved test code