@@ -16,13 +16,10 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
 package org.apache.jackrabbit.oak.plugins.index.lucene.dynamicBoost;
 
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.apache.commons.lang3.StringUtils;
@@ -145,8 +142,8 @@ public class DynamicBoostTest extends AbstractQueryTest {
                 explain("//element(*, dam:Asset)[jcr:contains(., 'plant')]", XPATH));
 
         assertQuery("//element(*, dam:Asset)[jcr:contains(., 'plant')]", XPATH,
-                Arrays.asList("/test/asset1", "/test/asset2", "/test/asset3"));
-        assertQuery("//element(*, dam:Asset)[jcr:contains(., 'flower')]", XPATH, Arrays.asList("/test/asset1", "/test/asset2"));
+                List.of("/test/asset1", "/test/asset2", "/test/asset3"));
+        assertQuery("//element(*, dam:Asset)[jcr:contains(., 'flower')]", XPATH, List.of("/test/asset1", "/test/asset2"));
     }
 
     @Test
@@ -154,7 +151,7 @@ public class DynamicBoostTest extends AbstractQueryTest {
         createAssetsIndexAndProperties(false, false);
         prepareTestAssets();
 
-        assertQuery("//element(*, dam:Asset)[jcr:contains(., 'FLOWER')]", XPATH, Arrays.asList("/test/asset1", "/test/asset2"));
+        assertQuery("//element(*, dam:Asset)[jcr:contains(., 'FLOWER')]", XPATH, List.of("/test/asset1", "/test/asset2"));
     }
 
     @Test
@@ -163,7 +160,7 @@ public class DynamicBoostTest extends AbstractQueryTest {
         prepareTestAssets();
 
         assertOrderedQuery("select [jcr:path] from [dam:Asset] where contains(*, 'plant')",
-                Arrays.asList("/test/asset2", "/test/asset3", "/test/asset1"));
+                List.of("/test/asset2", "/test/asset3", "/test/asset1"));
     }
 
     // dynamic boost: space is explained as OR instead of AND, this should be documented
@@ -173,7 +170,7 @@ public class DynamicBoostTest extends AbstractQueryTest {
         prepareTestAssets();
 
         assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'blue flower')", SQL2,
-                Arrays.asList("/test/asset1", "/test/asset2", "/test/asset3"));
+                List.of("/test/asset1", "/test/asset2", "/test/asset3"));
     }
 
     @Test
@@ -182,11 +179,11 @@ public class DynamicBoostTest extends AbstractQueryTest {
         prepareTestAssets();
 
         assertEquals(
-                "[dam:Asset] as [a] /* lucene:test-index(/oak:index/test-index) :fulltext:plant simtags:plant ft:(\"plant\")\n  where contains([a].[*], 'plant') */",
+                "[dam:Asset] as [a] /* lucene:test-index(/oak:index/test-index) :fulltext:plant simtags:plant^1.0E-4 ft:(\"plant\")\n  where contains([a].[*], 'plant') */",
                 explain("//element(*, dam:Asset)[jcr:contains(., 'plant')]", XPATH));
         assertQuery("//element(*, dam:Asset)[jcr:contains(., 'plant')]", XPATH,
-                Arrays.asList("/test/asset1", "/test/asset2", "/test/asset3"));
-        assertQuery("//element(*, dam:Asset)[jcr:contains(., 'flower')]", XPATH, Arrays.asList("/test/asset1", "/test/asset2"));
+                List.of("/test/asset1", "/test/asset2", "/test/asset3"));
+        assertQuery("//element(*, dam:Asset)[jcr:contains(., 'flower')]", XPATH, List.of("/test/asset1", "/test/asset2"));
     }
 
     @Test
@@ -194,7 +191,7 @@ public class DynamicBoostTest extends AbstractQueryTest {
         createAssetsIndexAndProperties(true, true);
         prepareTestAssets();
 
-        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'FLOWER')", SQL2, Arrays.asList("/test/asset1", "/test/asset2"));
+        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'FLOWER')", SQL2, List.of("/test/asset1", "/test/asset2"));
     }
 
     @Test
@@ -202,12 +199,12 @@ public class DynamicBoostTest extends AbstractQueryTest {
         createAssetsIndexAndProperties(true, true);
         prepareTestAssets();
 
-        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'blu?')", SQL2, Arrays.asList("/test/asset3"));
-        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'bl?e')", SQL2, Arrays.asList("/test/asset3"));
-        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, '?lue')", SQL2, Arrays.asList("/test/asset3"));
-        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'coff*')", SQL2, Arrays.asList("/test/asset2"));
-        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'co*ee')", SQL2, Arrays.asList("/test/asset2"));
-        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, '*ffee')", SQL2, Arrays.asList("/test/asset2"));
+        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'blu?')", SQL2, List.of("/test/asset3"));
+        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'bl?e')", SQL2, List.of("/test/asset3"));
+        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, '?lue')", SQL2, List.of("/test/asset3"));
+        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'coff*')", SQL2, List.of("/test/asset2"));
+        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'co*ee')", SQL2, List.of("/test/asset2"));
+        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, '*ffee')", SQL2, List.of("/test/asset2"));
     }
 
     @Test
@@ -215,8 +212,8 @@ public class DynamicBoostTest extends AbstractQueryTest {
         createAssetsIndexAndProperties(true, true);
         prepareTestAssets();
 
-        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'coffee flower')", SQL2, Arrays.asList("/test/asset2"));
-        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'blue   plant')", SQL2, Arrays.asList("/test/asset3"));
+        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'coffee flower')", SQL2, List.of("/test/asset2"));
+        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'blue   plant')", SQL2, List.of("/test/asset3"));
     }
 
     @Test
@@ -225,9 +222,9 @@ public class DynamicBoostTest extends AbstractQueryTest {
         prepareTestAssets();
 
         assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'blue OR flower')", SQL2,
-                Arrays.asList("/test/asset1", "/test/asset2", "/test/asset3"));
+                List.of("/test/asset1", "/test/asset2", "/test/asset3"));
         assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'blue OR coffee')", SQL2,
-                Arrays.asList("/test/asset2", "/test/asset3"));
+                List.of("/test/asset2", "/test/asset3"));
     }
 
     @Test
@@ -235,8 +232,19 @@ public class DynamicBoostTest extends AbstractQueryTest {
         createAssetsIndexAndProperties(true, true);
         prepareTestAssets();
 
-        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'plant -flower')", SQL2, Arrays.asList("/test/asset3"));
-        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'flower -coffee')", SQL2, Arrays.asList("/test/asset1"));
+        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'plant -flower')", SQL2, List.of("/test/asset3"));
+        assertQuery("select [jcr:path] from [dam:Asset] where contains(*, 'flower -coffee')", SQL2, List.of("/test/asset1"));
+    }
+
+    @Test
+    public void dynamicBoostLiteShouldGiveLessRelevanceToTags() throws Exception {
+        createAssetsIndexAndProperties(true, true);
+        prepareTestAssets();
+
+        assertOrderedQuery("select [jcr:path] from [dam:Asset] where contains(*, 'long OR plant')",
+                List.of("/test/asset1", "/test/asset2", "/test/asset3"));
+        assertOrderedQuery("select [jcr:path] from [dam:Asset] where contains(*, 'short OR coffee')",
+                List.of("/test/asset3", "/test/asset2"));
     }
 
     // Section 4. utils and assistant methods
@@ -285,13 +293,13 @@ public class DynamicBoostTest extends AbstractQueryTest {
 
             // we try with an array:
             t.getParent().setProperty("updateCount", 5);
-            t.setProperty("confidence", new ArrayList<>(), Type.STRINGS);
+            t.setProperty("confidence", List.of(), Type.STRINGS);
             root.commit();
 
             // we try with an array:
             if (nameProperty) {
                 t.getParent().setProperty("updateCount", 6);
-                t.setProperty("name", new ArrayList<>(), Type.STRINGS);
+                t.setProperty("name", List.of(), Type.STRINGS);
                 root.commit();
             }
 
@@ -369,7 +377,7 @@ public class DynamicBoostTest extends AbstractQueryTest {
         factory.queryTermsProvider = new FulltextQueryTermsProviderImpl();
     }
 
-    private Tree createIndex(String nodeType, boolean lite) throws Exception {
+    private Tree createIndex(String nodeType, boolean lite) {
         Tree rootTree = root.getTree("/");
         Tree index = createTestIndexNode(rootTree, LuceneIndexConstants.TYPE_LUCENE);
         index.setProperty(FulltextIndexConstants.COMPAT_MODE, IndexFormatVersion.V2.getVersion());
